--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+
 @font-face {
 	font-family: IRANSans;
 	font-style: normal;
@@ -79,4 +81,8 @@ body {
 	width: 100%;
 	height: 100%;
 	font-family: IRANSans;
+}
+
+.poppins {
+	font-family: Poppins;
 }
