--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,6 @@ body {
 .btn {
 	@apply rounded-full text-green-400 bg-green-100 hover:bg-green-400 hover:text-white dark:text-green-400 dark:bg-gray-700 dark:hover:text-white dark:hover:bg-green-600 w-8 h-8 py-2 transition ease-in-out duration-200;
 }
+.general-btn {
+	@apply rounded-full w-8 h-8 py-2 transition ease-in-out duration-300;
+}
